--- a/Weather4U/Weather4U/Weather4U.csproj
+++ b/Weather4U/Weather4U/Weather4U.csproj
@@ -99,6 +99,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavedWeathersPage.xaml.cs">
+      <DependentUpon>SavedWeathersPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WeatherBox.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +146,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SavedWeathersPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
