Tentativa de passagem de objeto entre páginas

--- a/Weather4U/Weather4U/Weather4U.csproj
+++ b/Weather4U/Weather4U/Weather4U.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>SavedWeathersPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="WeatherBox.cs" />
+    <Compile Include="WeatherController.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
